vendor/thiserror-1.0.24/tests/ui/transparent-display.stderr
error: cannot have both #[error(transparent)] and a display attribute
 --> $DIR/transparent-display.rs:5:1
  |
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
