vendor/thiserror-1.0.24/tests/ui/transparent-display.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(transparent)]
#[error("...")]
pub struct Error(anyhow::Error);

fn main() {}
